fix: correct wrong margin-bottom value

--- a/src/sass/_helpers.scss
+++ b/src/sass/_helpers.scss
@@ -105,6 +105,6 @@
 .more {
   @include lg {
     margin-top: 0.5em;
-    margin-bottom: 0,833333em;
+    margin-bottom: 0.833333em;
   }
 }
